--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -184,7 +184,7 @@
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
                                 <label>Tax Residence</label>
-                                <input required ng-model="user.taxResidence" name="taxResidence" minlength="6" maxlength="100">
+                                <input required ng-model="vm.kycquestions['Tax Residence'].answerText" name="taxResidence" minlength="6" maxlength="100">
 
                                 <div ng-messages="kycDetailsForm.taxResidence.$error" role="alert">
                                     <div ng-message-exp="['required', 'minlength', 'maxlength']">
@@ -204,7 +204,7 @@
                             </md-input-container>                                
                             <md-input-container class="md-block" flex="100" flex-offset="10" style="float:left;">
                                 <label>Annual Income</label>
-                                <input required ng-model="user.annualIncome" minlength="6" maxlength="100">
+                                <input required ng-model="vm.kycquestions['Annual Income'].answerText" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                     </div>
@@ -213,13 +213,13 @@
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
                                 <label>Source of Wealth</label>
-                                <input required ng-model="user.sourceWealth" name="sourceWealth" minlength="6" maxlength="100">
+                                <input required ng-model="vm.kycquestions['Source of Wealth'].answerText" name="sourceWealth" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
                                 <label>Source of Fund</label>
-                                <input required ng-model="user.sourceFund" name="sourceFund" minlength="6" maxlength="100">
+                                <input required ng-model="vm.kycquestions['Source of Funds'].answerText" name="sourceFund" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                     </div>
@@ -228,13 +228,13 @@
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
                                 <label>Estimated Liquid Assets</label>
-                                <input required ng-model="user.estimatedLiquidAssets" name="estimatedLiquidAssets" minlength="6" maxlength="100">
+                                <input required ng-model="vm.kycquestions['Estimated Liquid Assets'].answerText" name="estimatedLiquidAssets" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
-                                <label>Investigation Objectives</label>
-                                <input required ng-model="user.investigationObjectives" name="investigationObjectives" minlength="6" maxlength="100">
+                                <label>Investment Objectives</label>
+                                <input required ng-model="vm.kycquestions['Investment Objectives'].answerText" name="investigationObjectives" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                     </div>
@@ -242,14 +242,14 @@
                     <div layout="row" style="margin-top:0px;">
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
-                                <label>Likely frequency of Traders</label>
-                                <input required ng-model="user.likelyFrequency" name="likelyFrequency" minlength="6" maxlength="100">
+                                <label>Likely frequency of Trades</label>
+                                <input required ng-model="vm.kycquestions['Likely frequency of Trades'].answerText" name="likelyFrequency" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
                                 <label>Bank Reference</label>
-                                <input required ng-model="user.bankRef" name="bankRef" minlength="6" maxlength="100">
+                                <input required ng-model="vm.kycquestions['Bank Reference'].answerText" name="bankRef" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                     </div>
@@ -258,13 +258,13 @@
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
                                 <label>Bank account number</label>
-                                <input required ng-model="user.bankAcc" name="bankAcc" minlength="6" maxlength="100">
+                                <input required ng-model="vm.kycquestions['Bank Account Number'].answerText" name="bankAcc" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
                                 <label>Language Proficiency</label>
-                                <input required ng-model="user.languagePro" name="languagePro" minlength="6" maxlength="100">
+                                <input required ng-model="vm.kycquestions['Language Proficiency'].answerText" name="languagePro" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                     </div>
@@ -273,13 +273,13 @@
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
                                 <label>Academic Qualification</label>
-                                <input required ng-model="user.academicQualification" name="academicQualification" minlength="6" maxlength="100">
+                                <input required ng-model="vm.kycquestions['Academic Qualification'].answerText" name="academicQualification" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
-                                <label>Mother’s Maiden Name</label>
-                                <input required ng-model="user.motherMaidenName" name="motherMaidenName" minlength="6" maxlength="100">
+                                <label>Mother's Maiden Name</label>
+                                <input required ng-model="vm.kycquestions['Mother\'s Maiden Name'].answerText" name="motherMaidenName" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                     </div>
@@ -288,13 +288,13 @@
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
                                 <label>Name of Spouse</label>
-                                <input ng-model="user.spouseName" name="spouseName" minlength="6" maxlength="100">
+                                <input ng-model="vm.kycquestions['Name of Spouse'].answerText" name="spouseName" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block" flex-gt-sm>
                                 <label>Spouse’s Passport / NRIC Number</label>
-                                <input ng-model="user.spousePassport" name="spousePassport" minlength="6" maxlength="100">
+                                <input ng-model="vm.kycquestions['Spouse passport / NRIC number'].answerText" name="spousePassport" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                     </div>
